src/test/ui/rfc-2126-crate-paths/keyword-crate-as-identifier.rs
#![feature(crate_in_paths)]

fn main() {
    let crate = 0;
    //~^ ERROR expected unit struct/variant or constant, found module `crate`
}
